# sekejap

./: .gitignore  .rust-analyzer.json  Cargo.toml  README.md  context7.json  context7.md  docs.md  llms-full.txt  llms.txt
.github/workflows/: release.yml
benches/: core_vs_sekejap_vs_sqlite.rs  graph_traversal.rs  hybrid_query.rs  ilike_bench.rs  mega_benchmark.rs  sekejap_vs_sqlite.rs  spatial.rs  sql_vs_atomic.rs  vector_10k_4096.rs  vector_bench.rs
docs/: api-reference.md  benchmark-results.md  interface-table.md  python-api.md  roadmap.md  sekejap-sql-examples.md  sekejap-sql.md  skill.md  temporal-index.md  user-guide.md
examples/: aggregations.rs  benchmark.rs  benchmark_sqlite_vs_sekejap.rs  custom_data.rs  filters.rs  joins.rs  maintenance.rs
examples/benchmarks/: benchmark_write_1m.rs  benchmark_write_bulk.rs  benchmark_write_bulk_v2.rs  gdelt_benchmark.rs
examples/data-processing/: README.md  aggregations.rs  filters.rs  joins.rs
examples/python/: basic_operations.py
examples/python/benchmarks/: README.md  sqlite_vs_sekejap.py  write_benchmark.py
examples/python/data-processing/: README.md  aggregations.py  filters.py  joins.py
sekejap-benchmark/: Cargo.toml  README.md
sekejap-benchmark/cases/: README.md  THOUGHT_EXPERIMENTS.md
sekejap-benchmark/cases/causal-investigation/: README.md
sekejap-benchmark/cases/learning-paths/: README.md
sekejap-benchmark/cases/life-knowledge-graph/: README.md
sekejap-benchmark/cases/memory-time-space/: README.md
sekejap-benchmark/cases/music-discovery/: README.md
sekejap-benchmark/cases/research-network/: README.md
sekejap-benchmark/src/: main.rs
sekejap-benchmark/techniques/: RESULT_RUST.md  benchmark.py
sekejap-benchmark/techniques/graph-traversal/: METHOD.md
sekejap-benchmark/techniques/parser/: README.md
sekejap-benchmark/techniques/spatial-ops/: README.md
sekejap-benchmark/techniques/text-ops/: README.md
sekejap-benchmark/techniques/vector-ops/: README.md
skcli/: Cargo.toml
skcli/src/: main.rs
src/: arena.rs  atoms.rs  collection_bitmap.rs  config.rs  db.rs  geo.rs  geometry.rs  hashing.rs  lib.rs  mmap_hash.rs  pipeline.rs  query.rs  scalar.rs  sekejapql.rs  set.rs  sql.rs  stores.rs  types.rs
src/bm25/: dict.rs  index.rs  mod.rs  postings.rs  tokenizer.rs
src/engine/: buffer.rs  cache.rs  guard.rs  manifest.rs  mod.rs  policy.rs  remote.rs  scheduler.rs
src/fulltext/: mod.rs  seekstorm.rs  tantivy.rs
src/graph/: bitmap.rs  bloom.rs  concurrent.rs  csr.rs  mod.rs
src/hnsw/: algo.rs  distance.rs  graph.rs  mod.rs  storage.rs
src/index/: async_indexer.rs  fulltext.rs  hash_index.rs  mod.rs  range_index.rs  spatial.rs  time_index.rs
src/search/: disk.rs  index.rs  mod.rs  ranking.rs
src/sql/: ast.rs  bind.rs  executor.rs  lowering.rs  mod.rs  parser.rs
src/storage/: edgestore.rs  error.rs  gc.rs  ingestion.rs  mmap.rs  mod.rs  persistent.rs  persistent_graph.rs  promote.rs  promote_worker.rs  serving.rs  single.rs  vecstore.rs  wal.rs
src/text_index/: gin.rs  gist.rs  mod.rs  query.rs  trigram.rs
src/txn/: manager.rs  mod.rs  snapshot.rs  traits.rs  transaction.rs  version.rs
src/types/: blob.rs  collection.rs  decay.rs  edge.rs  geo.rs  geometry.rs  mod.rs  node.rs  payload.rs  schema.rs  vector.rs
src/vector/: access.rs  hnsw.rs  mod.rs
src/vectors/: index.rs  mod.rs  ops.rs  quantization.rs
src/vectors/hnsw/: algo.rs  graph.rs  mod.rs  storage.rs
src/wal/: disk.rs  mod.rs  noop.rs  traits.rs
tests/: diagnostics.rs  fulltext_integration.rs  fulltext_schema.rs  geometry_spatial.rs  hnsw_stress.rs  hybrid_query.rs  integration.rs  m10_index_metadata_health.rs  m11_geometry.rs  m1_basic_node_ops.rs  m2_tier2_promotion.rs  m3_multimodal_search.rs  m4_root_cause_analysis.rs  m5_identity_payload_split.rs  m6_improvements.rs  m7_scale.rs  m8_upsert_canonical_semantics.rs  m9_query_contract_extensions.rs  milestone_1_crud.rs  milestone_2_term_graph.rs  milestone_3_multimodal.rs  milestone_4_causal.rs  milestone_5_backup.rs  milestone_6_rag.rs  persistence.rs  python_parity_test.py  stress.rs  tdd.rs
tests/cases/m1_basic_node_ops/TC-1.1_create-node-with-entities/: README.md  mod.rs
tests/cases/m1_basic_node_ops/TC-1.2_upsert-ingestion-buffer/: README.md  mod.rs
tests/cases/m1_basic_node_ops/TC-1.3_spatial-index-registration/: README.md  mod.rs
tests/cases/m2_tier2_promotion/TC-2.1_simple-node-promotion/: README.md  mod.rs
tests/cases/m2_tier2_promotion/TC-2.2_duplicate-detection/: README.md  mod.rs
tests/cases/m2_tier2_promotion/TC-2.3_node-fusion/: README.md  mod.rs
tests/cases/m2_tier2_promotion/TC-2.4_hierarchy-edge-creation/: README.md  mod.rs
tests/cases/m2_tier2_promotion/TC-2.5_mvcc-snapshot-isolation/: README.md  mod.rs
tests/cases/m3_multimodal_search/TC-3.1_vector-similarity/: README.md
tests/cases/m3_multimodal_search/TC-3.2_spatial-radius/: README.md
tests/cases/m3_multimodal_search/TC-3.3_time-window-filter/: README.md
tests/cases/m3_multimodal_search/TC-3.4_hybrid-vector-spatial-time/: README.md
tests/cases/m3_multimodal_search/TC-3.5_temporal-spatial-bucketing/: README.md
tests/cases/m4_root-cause-analysis/TC-4.1_backward-traversal/: README.md
tests/cases/m4_root-cause-analysis/TC-4.2_time-window-traversal/: README.md
tests/cases/m4_root-cause-analysis/TC-4.3_weight-threshold/: README.md
tests/cases/m4_root-cause-analysis/TC-4.4_evidence-attribution/: README.md
tests/cases/m4_root-cause-analysis/TC-4.5_solution-node-matching/: README.md
wrappers/: Cargo.toml
wrappers/browser/: Cargo.toml
wrappers/browser/src/: lib.rs
wrappers/flutter/: Cargo.toml  build.rs
wrappers/flutter/src/: api.rs  frb_generated.rs  lib.rs
wrappers/python/: Cargo.toml  pyproject.toml
wrappers/python/python/sekejap/: __init__.py  __main__.py  _dataframe.py
wrappers/python/python/sekejap/libsekejap.dylib.dSYM/Contents/: Info.plist
wrappers/python/python/sekejap/libsekejap.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libsekejap.dylib.yml
wrappers/python/src/: lib.rs
(+5 files in other folders)
