[workspace]
members = [".", "wrappers/python"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/insanalamin/sekejap"
homepage = "https://sekejap.mecha.id"
description = "A graph-first, embedded multi-model database engine"

[package]
name = "sekejap"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/insanalamin/sekejap#readme"
keywords = ["database", "graph", "vector", "spatial", "multi-model"]
categories = ["database", "embedded", "data-structures"]

[dependencies]
ahash = "0.8.11"
anndists = "0.1.3"
arc-swap = "1.8.0"
bincode = "1.3"
crossbeam = "0.8.4"
crossbeam-epoch = "0.9.18"
dashmap = "6.1.0"
distances = { version = "1.8.0", optional = true }
half = { version = "2.4", optional = true }
log = "0.4.25"
memmap2 = "0.9.5"
rand = "0.9.2"
rayon = "1.10.0"
redb = "3.1.0"
rkyv = "0.8.14"
rstar = { version = "0.12.2", optional = true }
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.13.2"
tantivy = { version = "0.25.0", optional = true }
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.8.19"
uuid = "1.20.0"

[dev-dependencies]
criterion = "0.8.1"
rusqlite = "0.32"
zip = "2.2"

[features]
default = []
vector = ["dep:distances", "dep:half"]
spatial = ["dep:rstar"]
fulltext = ["dep:tantivy"]
all = ["vector", "spatial", "fulltext"]

[package.metadata.docs.rs]
all-features = true
