[workspace]
members = [".", "wrappers/python", "skcli"]

[workspace.package]
version = "0.8.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/insanalamin/sekejap"
homepage = "https://db.sekejap.life"
description = "A graph-first, embedded multi-model database engine"

[workspace.dependencies]
sekejap = { path = "." }

[package]
name = "sekejap"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/insanalamin/sekejap#readme"
keywords = ["database", "graph", "vector", "spatial", "multi-model"]
categories = ["database", "embedded", "data-structures"]

[dependencies]
serde_json = "1"
serde      = { version = "1", features = ["derive"] }
seahash    = "4"
crc32fast  = "1.4"
roaring    = "0.10"
memchr     = "2"
chrono     = "0.4"
uuid       = { version = "1", features = ["v4", "v5"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile  = "3"
rusqlite  = { version = "0.32", features = ["bundled"] }

[[bench]]
name = "sql_vs_atomic"
harness = false

[[bench]]
name = "sekejap_vs_sqlite"
harness = false

[[bench]]
name = "spatial"
harness = false

[[bench]]
name = "ilike_bench"
harness = false

[[bench]]
name = "vector_bench"
harness = false

[[bench]]
name = "graph_traversal"
harness = false

[[bench]]
name = "hybrid_query"
harness = false

[[bench]]
name = "mega_benchmark"
harness = false
