[package]
name = "sekejap-benchmark-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sekejap = { path = "..", features = ["fulltext"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tempfile = "3.10"
seahash = "4.1"
sqlparser = "0.53"
