[package]
name = "skcli"
version = "0.1.0"
edition = "2021"

[dependencies]
sekejap = { path = ".." }
rustyline = "13.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
comfy-table = "7.1"
anyhow = "1.0"
shell-words = "1.1"
seahash = "4.1.0"
