[package]
name = "sekejap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for the Sekejap embedded graph-first multimodel database"

[dependencies]
sekejap.workspace = true
rustyline = "13.0"
serde_json = "1.0"
[[bin]]
name = "sekejap"
path = "src/main.rs"
