[package]
name = "sekejap-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly (Wasm) bindings for Sekejap-DB"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Inherit core
sekejap = { path = "../..", default-features = false }

# Wasm Bridge
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wasm specific fixes - FORCE features for both versions
[dependencies.getrandom_02]
package = "getrandom"
version = "0.2.17"
features = ["js"]

[dependencies.getrandom_03]
package = "getrandom"
version = "0.3.4"
features = ["wasm_js"]

# Optional: Logging bridge
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["console"] }

[features]
default = []
