[package]
name = "sekejap-python"
version = "0.1.0"
edition = "2021"
description = "A graph-first, embedded multi-model database engine"
license = "MIT"
repository = "https://github.com/insanalamin/sekejap"
homepage = "https://sekejap.mecha.id"
documentation = "https://github.com/insanalamin/sekejap#readme"
keywords = ["database", "graph", "vector", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[lib]
name = "sekejap"
crate-type = ["cdylib", "rlib"]

[dependencies]
# SekejapDB core (same workspace)
sekejap = { path = "../..", default-features = false }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "auto-initialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"

[features]
default = ["fulltext", "spatial", "vector"]
fulltext = ["sekejap/fulltext"]
spatial = ["sekejap/spatial"]
vector = ["sekejap/vector"]
all = ["fulltext", "spatial", "vector"]

[tool.maturin]
module-name = "sekejap"
package-name = "sekejap"

[project.metadata]
name = "sekejap"
