[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sekejap"  # Keep name as it defines the PyPI identity
dynamic = ["version", "description"]
requires-python = ">=3.8"

[project.urls]
homepage = "https://sekejap.mecha.id"
repository = "https://github.com/insanalamin/sekejap"

[project.scripts]
sekejap = "sekejap.__main__:main"

[tool.maturin]
module-name = "sekejap"
bindings = "pyo3"
python-source = "python"
